--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -348,9 +348,6 @@ User sets the sender as `John`, which is the user's name, and sets `receiver` as
 User can generate multiple report documents with the same engagement, but with different SENDER and RECEIVER names. +
 System will not allow generating documents that already exists in the directory.
 
-.report document window
-image::pdf_1.png[width="500"]
-
 Once user enters the command, system will automatically open the generated document and display the command result in the output panel, showing "Engagement Report successfully generated."
 
 NOTE: User can alternatively click the green refresh button on top right of the documents explorer to refresh the documents directory.
@@ -361,23 +358,25 @@ image::pdf_function_btns.png[width="450", float="left"]
 .After clicking refresh button
 image::pdf_2.png[width="450"]
 
-User can also double click the list item in the documents explorer tree view to open the document file on their local computer file system. Below is the sample of generated document from the system.
-
 NOTE: Do not manually modify the document file name in the `reports/` directory as it might cause system failure in recognising the documents.
 
+--
 .pdf document sample
-image::pdf_sample.png[width="480", align="center"]
+image::pdf_sample.png[width="400", float="left"]
 
-If the user does not want to keep the document, instead of directing the actual directory in the local system, user can simply click the red `x` button, next to the refresh
+[.left]
+User can also double click the list item in the documents explorer tree view to open the document file on their local computer file system. Below is the sample of generated document from the system.
+--
+
+*Deleting Documents* +
+Instead of directing the actual directory in the local system, user can simply click the red `x` button, next to the refresh
 button to delete the selected document list item. Once system displays the popup message to confirm the user's decision, user will click the `OK` button to confirm deletion. +
 
 Delete function will only available when user has pre-selected the document list item and the selected item must be a .pdf form, not directory.
 Below is the screenshot after user clicks the delete button.
 
-.pdf delete pop up message
-image::pdf_delete.png[width="450", float="left"]
-.pdf delete after clicking ok button
-image::pdf_delete_after.png[width="450"]
+.pdf delete pop up message and after click
+image::pdf_delete_before_after.png[width="750"]
 
 Now, once system successfully deleted the selected document, system will display the status message above the documents explorer. Below is the screenshot of the system status message after deletion.
 
