--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -12,7 +12,7 @@ ifdef::env-github[]
 :note-caption: :information_source:
 :warning-caption: :warning:
 endif::[]
-:repoURL: https://github.com/se-edu/addressbook-level3/tree/master
+:repoURL: https://github.com/AY1920S1-CS2103T-F14-4/main/blob/master
 
 By: `Team Team CS2103T-F14-4`      Since: `Sep 2019`      Licence: `MIT`
 
@@ -140,7 +140,7 @@ image::CentralManager.png[]
 The `Storage` component,
 
 * can save `UserPref` objects in json format and read it back.
-* uses `CentralManager` to consolidate all the managers' data that needs to be saved. (e.g. Task Manager's data)
+* uses `CentralManager` to consolidate all the data that needs to be saved. (e.g. Task Manager's data)
 * can save the `CentralManager` data in json format and read it back.
 
 [[Design-Commons]]
@@ -245,10 +245,16 @@ such as edit task command (`editT`) and delete task command (`del`).
 
 
 // tag:generate-pdf[]
-=== Generate PDF Task Summary Feature
+=== Generate Task Summary and Delivery Orders in PDF Feature
 ==== Implementation
-The *generate PDF Task Summary* feature creates a task summary in a user-friendly layout in PDF format for *user reference* and *archive* usage.
-`PdfCreator` class creates and saves the PDF document as well as formatting its layout.
+Generation of PDF documents is handled by `PdfManager`.
+It is responsible in taking the essential inputs required to generate the document.
+The following inputs are required to generate a PDF document such as a PDF Delivery Order:
+
+* `filePath` - the directory where the pdf document is to be saved.
+* `data` - the data that is to be displayed in the PDF document.
+
+The `PdfManager` utilizes `PdfCreator` to create and save the PDF document as well as formatting the layouts.
 It is implemented with the help of an external library, https://github.com/itext/itext7[iText7].
 
 [NOTE]
@@ -257,6 +263,7 @@ It is a Affero General Public License (AGPL) library. +
 Information updated as of 6 November 2019.
 For more information, please visit the https://itextpdf.com/en[iText official website].
 
+To how how the PDF document is generated, generating *PDF Task Summary* will be used as an example for showcase.
 The following sequence diagram shows how the user command `savepdf` is being executed and handled.
 
 .Sequence Diagram of how PDF task summary is saved.
@@ -264,13 +271,13 @@ image::SavePdfCommand.png[]
 
 NOTE: The lifeline for `SavePdfCommandParser` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
 
-Notice that only the `filepath` and the `date of delivery` is needed when calling `saveDriverTaskPdf`.
-This is because only the saving location of the PDF file and the date, where the task summary will be based on, are the only fields needed for the `PdfCreator`.
-The rest of the components, such as fetching of the tasks, will be handled by the `Model` while the formatting will be handled by `PdfCreator`.
+Notice that only the `filepath` and the `date of delivery` is needed when calling `generateTaskSummaryPdf`.
+This is because only the saving location of the PDF file and the date, where the task summary will be based on, are the only fields needed for the `PdfManager`.
+The rest of the components, such as fetching of the tasks, will be handled in the `Model` while the formatting will be handled by `PdfCreator`.
 
-The following sequence diagram shows how the model interact with `PdfCreator` to generate the PDF task summary.
+The following sequence diagram shows how the model interact with `PdfManager` to generate the PDF task summary.
 
-.Sequence Diagram of how the model generates the PDF task summary.
+.Sequence Diagram of how the model interact with `PdfManager` to generates the PDF task summary.
 image::GeneratePdfSequenceDiagram.png[]
 
 The `PdfWrapperLayout` provides a outer canvas to encapsulates all the layouts.
@@ -289,10 +296,11 @@ image::GeneratePdfActivityDiagram.png[]
 
 ===== Aspect:
 
-* **Alternative 1 (current choice)**: Abstract the layout of each part of the task summary.
+* **Alternative 1 (current choice)**: Abstract the layout of each part of the PDF document
+(Eg. Class that handles task layout is separated from class that handles customer layout.)
 ** Pros: Encourages reuse and easier to manage and add on.
 ** Cons: Harder to implement.
-* **Alternative 2**: Do the whole task summary layout in 1 class.
+* **Alternative 2**: Do the whole PDF document layout in 1 class.
 ** Pros: Easy to implement.
 ** Cons: Harder to manage.
 // end::generate-pdf[]
